--- a/roles/ip_fabric/templates/base_spine.cfg
+++ b/roles/ip_fabric/templates/base_spine.cfg
@@ -6,42 +6,6 @@ feature vn-segment-vlan-based
 feature nv overlay
 nv overlay evpn
 
-interface Ethernet1/1
-  no switchport
-  medium p2p
-  ip unnumbered loopback0
-  ip ospf network point-to-point
-  no ip ospf passive-interface
-  ip router ospf 1 area 0.0.0.0
-  no shutdown
-
-interface Ethernet1/2
-  no switchport
-  medium p2p
-  ip unnumbered loopback0
-  ip ospf network point-to-point
-  no ip ospf passive-interface
-  ip router ospf 1 area 0.0.0.0
-  no shutdown
-
-interface Ethernet1/3
-  no switchport
-  medium p2p
-  ip unnumbered loopback0
-  ip ospf network point-to-point
-  no ip ospf passive-interface
-  ip router ospf 1 area 0.0.0.0
-  no shutdown
-
-interface Ethernet1/4
-  no switchport
-  medium p2p
-  ip unnumbered loopback0
-  ip ospf network point-to-point
-  no ip ospf passive-interface
-  ip router ospf 1 area 0.0.0.0
-  no shutdown
-
 interface loopback0
   ip address {{ lo0 }}/32
   ip router ospf 1 area 0.0.0.0
@@ -62,3 +26,14 @@ router bgp 65001
     address-family l2vpn evpn
       send-community extended
       route-reflector-client
+
+{% for interface in fabric_links %}
+interface {{ interface }}
+  no switchport
+  medium p2p
+  ip unnumbered loopback0
+  ip ospf network point-to-point
+  no ip ospf passive-interface
+  ip router ospf 1 area 0.0.0.0
+  no shutdown
+{% endfor %}
