--- a/roles/ip_fabric/templates/add_leaf_to_spine.cfg
+++ b/roles/ip_fabric/templates/add_leaf_to_spine.cfg
@@ -1,3 +1,14 @@
+{% for interface in fabric_links %}
+interface {{ interface }}
+  no switchport
+  medium p2p
+  ip unnumbered loopback0
+  ip ospf network point-to-point
+  no ip ospf passive-interface
+  ip router ospf 1 area 0.0.0.0
+  no shutdown
+{% endfor %}
+
 router bgp 65001
 {% for host in groups['leaves'] %}
   neighbor {{ hostvars[host]['lo0a'] }}
