--- a/roles/ip_fabric/templates/base_leaf.cfg
+++ b/roles/ip_fabric/templates/base_leaf.cfg
@@ -34,7 +34,8 @@ interface nve1
   source-interface loopback0
   member vni 16100 associate-vrf
 
-interface Ethernet1/1
+{% for interface in fabric_links %}
+interface {{ interface }}
   no switchport
   medium p2p
   ip unnumbered loopback0
@@ -42,24 +43,7 @@ interface Ethernet1/1
   no ip ospf passive-interface
   ip router ospf 1 area 0.0.0.0
   no shutdown
-
-interface Ethernet1/2
-  no switchport
-  medium p2p
-  ip unnumbered loopback0
-  ip ospf network point-to-point
-  no ip ospf passive-interface
-  ip router ospf 1 area 0.0.0.0
-  no shutdown
-
-interface Ethernet1/3
-  no switchport
-  medium p2p
-  ip unnumbered loopback0
-  ip ospf network point-to-point
-  no ip ospf passive-interface
-  ip router ospf 1 area 0.0.0.0
-  no shutdown
+{% endfor %}
 
 interface loopback0
   ip address {{ lo0a }}/32
