--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,5 +2,5 @@
 host_key_checking = False
 retry_files_enabled = False
 
-#[persistent_connection]
-#command_timeout=60
+[persistent_connection]
+command_timeout = 120
