--- a/roles/ip_fabric/templates/add_vpc.cfg
+++ b/roles/ip_fabric/templates/add_vpc.cfg
@@ -1,5 +1,6 @@
 {% for interface in vpc_port_channels %}
 interface {{ interface['name'] }}
+  switchport access vlan {{ interface['vlan'] }}
   channel-group {{ interface['channel_group'] }}
 interface port-channel{{ interface['channel_group'] }}
   vpc {{ interface['channel_group'] }}
