--- a/roles/ip_fabric/templates/base_leaf.cfg
+++ b/roles/ip_fabric/templates/base_leaf.cfg
@@ -71,5 +71,7 @@ router bgp 65001
     inherit peer spine
   neighbor 10.255.1.3
     inherit peer spine
+  vrf TENANT-1
+    address-family ipv4 unicast
 
 evpn
